module(
    name = "go-zserio",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "gazelle", version = "0.44.0")

bazel_dep(name = "bazel_env.bzl", version = "0.4.0", dev_dependency = True)
bazel_dep(name = "rules_python", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "rules_jvm_external", version = "6.7", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.5.0", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip", dev_dependency = True)
pip.parse(
    experimental_index_url = "https://pypi.org/simple",
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//test/rules:requirements.txt",
)
use_repo(pip, "pip")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go-zserio-go-sdk",
    version = "1.24.4",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.gazelle_default_attributes(
    build_file_generation = "on",
    directives = [
        "gazelle:proto disable",
    ],
)
use_repo(
    go_deps,
    "com_github_antlr_antlr4_runtime_go_antlr_v4",
    "com_github_google_go_cmp",
    "com_github_iancoleman_strcase",
    "com_github_icza_bitio",
    "com_github_masterminds_sprig_v3",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
    "com_github_x448_float16",
    "org_golang_x_exp",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven", dev_dependency = True)
maven.install(
    name = "go_zserio_maven_deps",
    artifacts = [
        "io.github.ndsev:zserio:2.11.0",
    ],
    # Update this by running: bazel run @go_zserio_maven_deps//:pin
    lock_file = "//:maven_install.lock.json",
    repositories = [
        "https://repo.maven.apache.org/maven2/",
    ],
)
use_repo(
    maven,
    "go_zserio_maven_deps",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "zserio",
    sha256 = "e1b5824836405635fc5a22639394458949d358e6450c4d874f45a56ed5186f3c",
    url = "https://github.com/ndsev/zserio/releases/download/v2.11.0/zserio-2.11.0-bin.zip",
)
