load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "interface",
    srcs = [
        "iface.go",
        "packing_context_node.go",
        ],
    importpath = "github.com/woven-planet/go-zserio/interface",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_icza_bitio//:go_default_library",
        "@com_github_x448_float16//:go_default_library",
    ],
)