load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "interface",
    srcs = [
        "iface.go",
        "packing_context_node.go",
    ],
    importpath = "github.com/woven-planet/go-zserio/interface",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_icza_bitio//:bitio"],
)
