load("@io_bazel_rules_go//go:def.bzl", "go_test")

genrule(
    name = "testdata",
    outs = ["testdata.bin"],
    cmd = "$(location //test/python:write_test_data) $@",
    message = "Generating zserio payload binary using official Python bindings",
    tools = ["//test/python:write_test_data"],
)

go_test(
    name = "test_test",
    srcs = ["integration_test.go"],
    data = [
        ":testdata",
    ] + glob(["features/*.feature"]),
    deps = [
        "//test/go/reference_modules/testobject1/testobject",
        "@com_github_cucumber_godog//:godog",
        "@com_github_icza_bitio//:bitio",
    ],
    env = {
        "TESTDATA_BIN": "$(rootpath :testdata)",
    }
)
