load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "zserio_lib",
    srcs = ["main.go"],
    importpath = "github.com/woven-planet/go-zserio/zserio",
    visibility = ["//visibility:private"],
    deps = ["//zserio/cmd"],
)

go_binary(
    name = "zserio",
    embed = [":zserio_lib"],
    visibility = ["//visibility:public"],
)
