load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ztype",
    srcs = [
        "bits_decode.go",
        "bits_encode.go",
        "bool_decode.go",
        "bool_encode.go",
        "extern_decode.go",
        "extern_encode.go",
        "extern.go",
        "float_decode.go",
        "float_encode.go",
        "limits.go",
        "string_decode.go",
        "string_encode.go",
        "varint_decode.go",
        "varint_encode.go",
        "varuint_decode.go",
        "varuint_encode.go",
    ],
    importpath = "github.com/woven-planet/go-zserio/ztype",
    visibility = ["//visibility:public"],
    deps = [
        "//interface",
        "@com_github_icza_bitio//:go_default_library",
        "@com_github_x448_float16//:go_default_library",
    ],
)

go_test(
    name = "ztype_test",
    srcs = [
        "bits_decode_test.go",
        "bits_encode_test.go",
        "bool_decode_test.go",
        "bool_encode_test.go",
        "float_decode_test.go",
        "float_encode_test.go",
        "string_decode_test.go",
        "string_encode_test.go",
        "varint_decode_test.go",
        "varint_encode_test.go",
        "varuint_decode_test.go",
        "varuint_encode_test.go",
    ],
    deps = [
        ":ztype",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@com_github_icza_bitio//:go_default_library",
    ],
)
