load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ztype",
    srcs = [
        "array.go",
        "array_decode.go",
        "array_encode.go",
        "array_traits.go",
        "bit_alignment.go",
        "bits_decode.go",
        "bits_encode.go",
        "bool_decode.go",
        "bool_encode.go",
        "delta_context.go",
        "doc.go",
        "extern.go",
        "extern_decode.go",
        "extern_encode.go",
        "float_decode.go",
        "float_encode.go",
        "limits.go",
        "packed_array_traits.go",
        "packing_context_node.go",
        "reader.go",
        "string_decode.go",
        "string_encode.go",
        "varint_decode.go",
        "varint_encode.go",
        "varuint_decode.go",
        "varuint_encode.go",
        "writer.go",
    ],
    importpath = "github.com/woven-planet/go-zserio/ztype",
    visibility = ["//visibility:public"],
    deps = [
        "//interface",
        "@com_github_icza_bitio//:bitio",
        "@com_github_x448_float16//:float16",
    ],
)

go_test(
    name = "ztype_test",
    srcs = [
        "array_decode_test.go",
        "array_encode_test.go",
        "array_test.go",
        "bits_decode_test.go",
        "bits_encode_test.go",
        "bool_decode_test.go",
        "bool_encode_test.go",
        "float_decode_test.go",
        "float_encode_test.go",
        "string_decode_test.go",
        "string_encode_test.go",
        "varint_decode_test.go",
        "varint_encode_test.go",
        "varuint_decode_test.go",
        "varuint_encode_test.go",
    ],
    deps = [
        ":ztype",
        "//interface",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_icza_bitio//:bitio",
    ],
)
