load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ast",
    srcs = [
        "bitmask.go",
        "choice.go",
        "const.go",
        "enum.go",
        "expression.go",
        "field.go",
        "model.go",
        "package.go",
        "scope.go",
        "struct.go",
        "type_reference.go",
        "union.go",
    ],
    importpath = "github.com/woven-planet/go-zserio/internal/ast",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/parser",
        "@com_github_iancoleman_strcase//:strcase",
    ],
)

go_test(
    name = "ast_test",
    srcs = [
        "enum_test.go",
        "expression_test.go",
    ],
    deps = [
        ":ast",
        "//internal/parser",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
