load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "generate.go",
        "root.go",
    ],
    importpath = "github.com/woven-planet/go-zserio/zserio/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/generator",
        "//internal/model",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_library(
    name = "cli",
    srcs = [
        "generate.go",
        "root.go",
    ],
    importpath = "github.com/woven-planet/go-zserio/internal/cli",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/generator",
        "//internal/model",
        "@com_github_spf13_cobra//:cobra",
    ],
)
