load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "model",
    srcs = [
        "model.go",
        "package.go",
        "transform.go",
    ],
    importpath = "github.com/woven-planet/go-zserio/internal/model",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/ast",
        "//internal/parser",
        "//internal/visitor",
        "@com_github_antlr_antlr4_runtime_go_antlr//v4:antlr",
    ],
)

go_test(
    name = "model_test",
    srcs = [
        "model_test.go",
        "transform_test.go",
    ],
    data = ["//testdata:examples"],
    embed = [":model"],
    env = {
        "TEST_ZSERIO_EXAMPLES": "$(rootpaths //testdata:examples)",
    },
    deps = [
        "//internal/ast",
        "@com_github_google_go_cmp//cmp",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)
