load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_antlr//antlr:antlr4.bzl", "antlr")

antlr(
    name = "generated",
    srcs = [
        "ZserioLexer.g4",
        "ZserioParser.g4",
    ],
    language = "Go",
    listener = False,
    visitor = True,
)

go_library(
    name = "parser",
    srcs = [
        "constants.go",
        ":generated",  # keep
    ],
    importpath = "github.com/woven-planet/go-zserio/internal/parser",
    visibility = ["//:__subpackages__"],
    deps = [
        "@antlr4_runtimes//:go",  # keep
    ],
)
