load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "visitor",
    srcs = ["visitor.go"],
    importpath = "github.com/woven-planet/go-zserio/internal/visitor",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/ast",
        "//internal/parser",
        "@com_github_antlr4_go_antlr_v4//:antlr",
    ],
)
