load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:ignore

rootpkg="github.com/woven-planet/go-zserio/test/go"

genrule(
    name = "gen",
    srcs = [
        "//testdata:zserio_schema",
        "//testdata:zserio_schema_all",
    ],
    outs = [
        "reference_modules/testobject1/testobject/pkg.go",
        "reference_modules/testobject1/testobject/test_object.go",
        "reference_modules/all/pkg.go",
        "reference_modules/core/instantiations/pkg.go",
        "reference_modules/core/instantiations/instantiated_template_struct.go",
        "reference_modules/core/templates/pkg.go",
        "reference_modules/core/types/pkg.go",
        "reference_modules/core/types/color.go",
        "reference_modules/core/types/city_attributes.go",
        "reference_modules/core/types/value_wrapper.go",
    ],
    cmd = "$(execpath //zserio) generate --rootpackage {rootpackage} --out {out} {proto_dir} &>1".format(
        rootpackage=rootpkg,
        out="$(@D)",
        proto_dir="testdata/reference_modules",
    ),
    tools = [
        "//zserio",
    ],
)

go_library(
    name = "testobject",
    srcs = [
        "reference_modules/testobject1/testobject/pkg.go",
        "reference_modules/testobject1/testobject/test_object.go",
    ],
    importpath = rootpkg + "/reference_modules/testobject1/testobject",
    deps = [
        "//interface",
        "//ztype",
        ":core_types",
        ":core_instantiations",
        "@com_github_icza_bitio//:bitio",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "core_instantiations",
    srcs = [
        "reference_modules/core/instantiations/pkg.go",
        "reference_modules/core/instantiations/instantiated_template_struct.go",
    ],
    importpath = rootpkg + "/reference_modules/core/instantiations",
    deps = [
        "//interface",
        ":core_types",
        "@com_github_icza_bitio//:bitio",
    ],
)

go_library(
    name = "core_types",
    srcs = [
        "reference_modules/core/types/pkg.go",
        "reference_modules/core/types/color.go",
        "reference_modules/core/types/city_attributes.go",
        "reference_modules/core/types/value_wrapper.go",
    ],
    importpath = rootpkg + "/reference_modules/core/types",
    deps = [
        "//interface",
        "//ztype",
        "@com_github_icza_bitio//:bitio",
    ],
)
