load("@pip//:requirements.bzl", "requirement")

java_binary(
    name = "zserio_compiler",
    main_class = "zserio.tools.ZserioToolPython",
    runtime_deps = [
        "@maven//:io_github_ndsev_zserio",
    ],
)

genrule(
    name = "zserio_code",
    srcs = [
        "//testdata:zserio_schema",
        "//testdata:zserio_schema_all",
        requirement("zserio"),
    ],
    outs = [
        "testdata/__init__.py",
        "testdata/api.py",
        "testdata/reference_modules/core/types/color.py",
        "testdata/reference_modules/core/types/value_wrapper.py",
        "testdata/reference_modules/core/types/__init__.py",
        "testdata/reference_modules/core/types/api.py",
        "testdata/reference_modules/core/types/city_attributes.py",
        "testdata/reference_modules/core/__init__.py",
        "testdata/reference_modules/core/instantiations/__init__.py",
        "testdata/reference_modules/core/instantiations/api.py",
        "testdata/reference_modules/core/instantiations/instantiated_template_struct.py",
        "testdata/reference_modules/core/api.py",
        "testdata/reference_modules/core/templates/__init__.py",
        "testdata/reference_modules/core/templates/api.py",
        "testdata/reference_modules/all/__init__.py",
        "testdata/reference_modules/all/api.py",
        "testdata/reference_modules/__init__.py",
        "testdata/reference_modules/api.py",
        "testdata/reference_modules/testobject1/__init__.py",
        "testdata/reference_modules/testobject1/api.py",
        "testdata/reference_modules/testobject1/testobject/__init__.py",
        "testdata/reference_modules/testobject1/testobject/api.py",
        "testdata/reference_modules/testobject1/testobject/test_object.py",
    ],
    cmd = "$(location zserio_compiler) -src $$(dirname $$(dirname $(location //testdata:zserio_schema))) reference_modules/all.zs -setTopLevelPackage testdata -python $(RULEDIR)",
    tools = [
        ":zserio_compiler",
    ],
)

py_library(
    name = "py_reference_modules",
    srcs = [
        ":zserio_code",
    ],
    imports = ["."],
)

py_binary(
    name = "write_test_data",
    srcs = ["write_test_data.py", ":zserio_code"],
    deps = [
        ":py_reference_modules",
        requirement("zserio"),
    ],
    visibility = ["//visibility:public"],
)

genrule(
    name = "testdata_bin",
    tools = [
        ":write_test_data",
    ],
    outs = [
        "testdata.bin",
    ],
    cmd = "$(location write_test_data) $@",
)
